--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "react-hammerjs": "^1.0.1",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-slick": "^0.28.1",
     "redux": "^4.1.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack": "^5.66.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,7 +59,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "tailwindcss": "^3.0.15"
