--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hammerjs": "^1.0.1",
@@ -28,11 +27,8 @@
     "react-slick": "^0.28.1",
     "redux": "^4.1.0",
     "redux-thunk": "^2.4.1",
-    "sass": "^1.35.1",
-    "sass-loader": "^12.1.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^1.0.1",
-    "webpack": "^5.66.0"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,8 +55,7 @@
     ]
   },
   "devDependencies": {
-    "postcss": "^8.4.5",
-    "postcss-import": "^14.0.2",
+    "node-sass": "^7.0.1",
     "tailwindcss": "^3.0.15"
   }
 }
