--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-calendar": "^3.6.0",
     "react-dom": "^17.0.2",
     "react-hammerjs": "^1.0.1",
     "react-player": "^2.9.0",
