--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react": "^17.0.2",
     "react-calendar": "^3.6.0",
     "react-dom": "^17.0.2",
-    "react-hammerjs": "^1.0.1",
+    "@win11react/react-hammerjs": "1.0.1",
     "react-player": "^2.9.0",
     "react-redux": "^8.0.1",
     "react-scripts": "^5.0.1",
