--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,14 @@
 version: 2
-
+registries:
+  npm-github:
+    type: npm-registry
+    url: https://npm.pkg.github.com
+    token: ${{secrets.DEPENDABOT_TOKEN}}
 updates:
   - package-ecosystem: npm
     directory: /
+    registries:
+    - npm-github
     schedule:
       interval: daily
 
