--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ registries:
   npm-github:
     type: npm-registry
     url: https://npm.pkg.github.com
-    token: ${{secrets.DEPENDABOT_TOKEN}}
+    token: ${{secrets.BOT}}
 updates:
   - package-ecosystem: npm
     directory: /
