--- a/package.json
+++ b/package.json
@@ -5,34 +5,30 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@mui/icons-material": "^5.3.0",
+    "@mui/icons-material": "^5.6.2",
     "@mui/lab": "^5.0.0-alpha.67",
-    "@mui/material": "^5.3.0",
-    "@reduxjs/toolkit": "^1.7.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@mui/material": "^5.6.4",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@win11react/react-hammerjs": "1.0.1",
     "axios": "^0.27.2",
     "color-parse": "^1.4.2",
     "color-rgba": "^2.4.0",
     "react": "^17.0.2",
-    "react-calendar": "^3.6.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
-    "@win11react/react-hammerjs": "1.0.1",
-    "react-player": "^2.9.0",
+    "react-player": "^2.10.0",
     "react-redux": "^8.0.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.28.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -60,6 +56,6 @@
   },
   "devDependencies": {
     "node-sass": "^7.0.1",
-    "tailwindcss": "^3.0.15"
+    "tailwindcss": "^3.0.24"
   }
 }
