--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/lab": "^5.0.0-alpha.67",
     "@mui/material": "^5.6.4",
     "@reduxjs/toolkit": "^1.8.1",
+    "@sentry/react": "^6.19.7",
+    "@sentry/tracing": "^6.19.7",
     "@win11react/react-hammerjs": "1.0.1",
     "axios": "^0.27.2",
     "color-parse": "^1.4.2",
