--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -10,7 +10,6 @@ jobs:
       fail-fast: false
       matrix:
         platform: [macos-latest, ubuntu-latest, windows-latest]
-        toolchain: [stable, i686-pc-windows-msvc]
 
     runs-on: ${{ matrix.platform }}
     env:
@@ -29,30 +28,16 @@ jobs:
           git config --global url."https://".insteadOf git://
 
       - name: install Rust stable
-        if: matrix.platform == 'macos-latest'
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          
-      - name: install Rust stable
-        if: matrix.platform == 'windows-latest'
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ matrix.toolchain }}    
-
-      - name: install Rust stable
-        if: matrix.platform == 'ubuntu-latest'
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          
       - name: install webkit2gtk (ubuntu only)
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt-get install -y webkit2gtk-4.0
 
-      - name: ci
+      - name: CI
         run: |
           npm ci
 
@@ -67,3 +52,42 @@ jobs:
           releaseBody: ${{ github.event.issue.body }}
           releaseDraft: false
           prerelease: false
+          
+  publish-32:
+    if: github.event.label.name == 'desktop-release'
+    runs-on: windows-latest
+    env:
+      CI: false
+    steps:
+      - uses: actions/checkout@v3
+      - name: setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 12
+          cache: npm
+
+      - name: git http
+        run: |
+          git config --global url."https://github.com/".insteadOf git@github.com:
+          git config --global url."https://".insteadOf git://
+
+      - name: install Rust i686-pc-windows-msvc
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: i686-pc-windows-msvc
+
+      - name: CI
+        run: |
+          npm ci
+
+      - name: install app dependencies and build it
+        run: npm run build
+      - uses: tauri-apps/tauri-action@v0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tagName: __VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
+          releaseName: "Win11inReact v__VERSION__"
+          releaseBody: ${{ github.event.issue.body }}
+          releaseDraft: false        
+          
