--- a/.github/workflows/PR-Preview.yml
+++ b/.github/workflows/PR-Preview.yml
@@ -24,19 +24,22 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install NPM packages
-        run: npm ci
+      - if: github.event.pull_request.opened == true
+        name: create repo
+        run: gh repo create blueDroidBot/${{ github.event.pull_request.number }} --public
+        env:
+          GITHUB_TOKEN: ${{ secrets.BOT }}
 
-      - name: Build project
-        run: CI=false PUBLIC_URL=https://android-previews.pr.blueedge.me/${{ github.event.pull_request.number }} npm run build
+      - name: Build
+        run: |
+          npm ci
+          CI=false PUBLIC_URL=https://android-preview.blueedge.me/${{ github.event.pull_request.number }} npm run build
 
       - uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.BOT }}
           publish_dir: ./build
-          destination_dir: ./${{ github.event.pull_request.number }}
-          cname: android-previews.pr.blueedge.me
-          external_repository: win11bot/android-previews
+          external_repository: blueDroidBot/${{ github.event.pull_request.number }}
 
       - name: Sleep to make sure page gets updated
         run: sleep 1m
@@ -47,7 +50,7 @@ jobs:
         with:
           body: |
             ✔️ Deploy Preview for Ready!
-            😎 Browse the preview: https://android-previews.pr.blueedge.me/${{ github.event.pull_request.number }} !
+            😎 Browse the preview: https://android-preview.blueedge.me/${{ github.event.pull_request.number }} !
             🔍 Inspect the deploy log: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
           comment-id: ${{ steps.couc.outputs.comment-id }}
           edit-mode: replace
