--- a/.github/workflows/Build-Deploy.yml
+++ b/.github/workflows/Build-Deploy.yml
@@ -20,9 +20,7 @@ jobs:
         cache: npm
 
     - name: Build
-      run: |
-        CI=false npm install
-        CI=false npm run build
+      run: npm ci && npm run build
 
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
