--- a/.github/workflows/Build-Deploy.yml
+++ b/.github/workflows/Build-Deploy.yml
@@ -20,7 +20,7 @@ jobs:
         cache: npm
 
     - name: Build
-      run: npm ci && npm run ghbuilder
+      run: npm ci && npm run ghbuild
 
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
