--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "ghbuilder": "CI=false react-scripts build",
+    "ghbuild": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "tauri": "tauri"
