--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -47,7 +47,7 @@ jobs:
           npm ci
 
       - name: install app dependencies and build it
-        run: npm run ghbuild
+        run: npm run build
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
