--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@tauri-apps/api": "^1.0.0-rc.6",
     "@win11react/react-hammerjs": "1.0.2",
     "axios": "^0.27.2",
+    "@craco/craco": "6.4.3", 
+    "craco-esbuild": "0.5.1",
     "color-parse": "^1.4.2",
     "color-rgba": "^2.4.0",
     "react": "^18.1.0",
@@ -36,7 +38,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "ghbuild": "CI=false react-scripts build",
+    "ghbuild": "CI=false craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "tauri": "tauri"
