--- a/.github/workflows/Issue-text.yml
+++ b/.github/workflows/Issue-text.yml
@@ -4,9 +4,15 @@ on:
   issues:
     types: [opened]
 
+permissions:
+  contents: read
+
 jobs:
   comment:
     runs-on: ubuntu-latest
+
+    permissions:
+      issues: write
 
     steps:
     - uses: ben-z/actions-comment-on-issue@1.0.2
@@ -18,13 +24,12 @@ jobs:
       id: issue-parser
       with:
         template-path: .github/ISSUE_TEMPLATE/bug_report.yml
-        
-    - run: echo '${{ steps.issue-parser.outputs.jsonString }}'
-    
-    - run: echo ${{ steps.issue-parser.outputs.issueparser_what_browser_are_you_seeing_the_problem_on }}
-    
-    - uses: actions-ecosystem/action-add-labels@v1
+
+    - name: Set labels based on browsers field
+      uses: redhat-plumbers-in-action/advanced-issue-labeler@v1
       with:
-        labels: ${{ steps.issue-parser.outputs.issueparser_what_browser_are_you_seeing_the_problem_on }}
-        github_token: ${{ secrets.BOT }}
-        
+        issue-form: ${{ steps.issue-parser.outputs.jsonString }}
+        section: browsers
+        block-list: |
+          Other Browser
+        token: ${{ secrets.GITHUB_TOKEN }}
